Fix #112083: Loop cut requires GL only in interactive mode

Loop cut operator should only require OpenGL in interactive mode, this
makes it possible to run background python script calling the operator.